# quarto-template

./: .gitignore  README.md  latexmkrc  pyproject.toml  sample.qmd
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
