[project]
name = "quarto-template"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Toshihiro Yamaguchi", email = "toshihiro.engineer@gmail.com"},
]
dependencies = [
    "jupyterlab>=4.3.4",
]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
